kubernetes/monitoring/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    tailscale.com/hostname: alertmanager
    tailscale.com/proxy-class: standard
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - alertmanager
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-alertmanager
                port:
                  number: 9093
